force-app/main/default/objects/Outreach__c/Outreach__c.object-meta.xml
<CustomObject>
    <description>A test object for Outreach</description>
    <label>Outreach</label>
    <nameField>
        <label>Outreach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outreach</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>