force-app/main/default/objects/Outreach__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account look up field</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach</relationshipLabel>
    <relationshipName>Outreach</relationshipName>
    <type>Lookup</type>
</CustomField>