force-app/main/default/objects/Outreach__c/fields/FollowUpTime__c.field-meta.xml
<CustomField>
    <fullName>FollowUpTime__c</fullName>
    <defaultValue>TODAY() + 5</defaultValue>
    <description>requires that all new Outreach must be followed up within 5 days of being created in the system</description>
    <inlineHelpText>Outreach must be followed up within 5 days</inlineHelpText>
    <label>FollowUpTime</label>
    <type>Date</type>
</CustomField>