force-app/main/default/objects/Outreach__c/fields/Max_Pay_c__c.field-meta.xml
<CustomField>
    <fullName>Max_Pay_c__c</fullName>
    <description>Max Pay</description>
    <inlineHelpText>Max Pay</inlineHelpText>
    <label>Max Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>