force-app/main/default/objects/Outreach__c/fields/Min_Pay_c__c.field-meta.xml
<CustomField>
    <fullName>Min_Pay_c__c</fullName>
    <description>Minimum Outreach Pay</description>
    <inlineHelpText>Minimum Outreach Pay</inlineHelpText>
    <label>Min Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>