force-app/main/default/objects/Outreach__c/validationRules/Min_Pay_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay_c__c  &gt;  Max_Pay_c__c</errorConditionFormula>
    <errorMessage>Maximum Pay should be more than Minimum Pay</errorMessage>
</ValidationRule>